--- a/package.json
+++ b/package.json
@@ -45,6 +45,17 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.2.1",
-    "shorthash2": "^1.0.5"
+    "get-stream": "^9.0.1",
+    "jwt-simple": "^0.5.5",
+    "moment": "^2.29.2",
+    "moment-timezone": "^0.6.0",
+    "mongodb": "^6.13.1",
+    "mysql2": "^3.3.3",
+    "pdfkit": "^0.17.2",
+    "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3",
+    "shorthash2": "^1.0.5",
+    "sequelize": "^6.37.7",
+    "xlsx": "^0.18.5"
   }
 }
